Fixed css for div.dl-description (#227)
Div by default take 100% of height of parent element
due to transformation it was going out of bounds, and link were overflowing

--- a/src/scss/styles-2-index.scss
+++ b/src/scss/styles-2-index.scss
@@ -66,6 +66,7 @@ a.dl-button .dl-description {
   left: 50%;
   white-space: nowrap;
   transform: translate(-50%,-3.8rem);
+  height: 50%; /* div take 100% of a tag height and goes out of bound */
 }
 
 a.dl-button:hover {
